--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "grunt-contrib-jasmine": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "gulp-jasmine": "^2.4.2"
+  },
+  "dependencies": {
+    "eventbusjs": "^0.1.0"
   }
 }
