--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "devDependencies": {
     "bower": "^1.3.12",
+    "browserify": "^14.1.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jasmine": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
-    "gulp-jasmine": "^2.4.2"
+    "grunt-template-jasmine-requirejs": "^0.2.3",
+    "gulp-jasmine": "^2.4.2",
+    "karma": "^1.5.0",
+    "karma-browserify": "^5.1.1",
+    "watchify": "^3.9.0"
   },
   "dependencies": {
     "eventbusjs": "^0.1.0"
