Fixed versions... again.

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "description": "Mars Rover kata",
     "repository": "https://github.com/vfarcic/mars-rover-kata",
-    "license": "Apache License 2",
+    "license": "Apache-2.0",
     "dependencies": {
     }
 }
