--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "version": "0.0.1",
   "description": "Mars Rover kata",
   "repository": "https://github.com/vfarcic/mars-rover-kata",
-  "license": "Apache License 2",
+  "license": "Apache-2.0",
   "scripts": {
     "pretest": "npm install",
     "test": "grunt jasmine"
   },
   "devDependencies": {
-    "bower": "^1.3.12",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-jasmine": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "gulp-jasmine": "^2.4.2"
+    "bower": "^1.3.x",
+    "grunt": "^1.0.x",
+    "grunt-cli": "^1.2.x",
+    "grunt-contrib-jasmine": "^1.1.x",
+    "grunt-contrib-watch": "^1.0.x",
+    "gulp-jasmine": "^2.4.x"
   },
   "dependencies": {
-    "eventbusjs": "^0.1.0"
+    "eventbusjs": "^0.1.x"
   }
 }
